Bug 125075 - Fetch list does not clear the previous list
Summary: Fetch list does not clear the previous list
Status: RESOLVED FIXED
Alias: None
Product: cervisia
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Loose
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-04-06 22:50 UTC by Tommi Uimonen
Modified: 2006-05-29 19:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tommi Uimonen 2006-04-06 22:50:41 UTC
Version:           2.4.2 (using KDE 3.5.2, Debian Package 4:3.5.2-1 (testing/unstable))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.15.6

Pressing multiple times the 'Fetch list' under Repository->Check out->Branch tag keeps the old values and adds the new values too. So you get multiple entries of the same items.

I couldn't verify this behaviour on the Module: Fetch list, since it didn't fetch anything to the list.
Comment 1 Christian Loose 2006-05-29 19:32:34 UTC
SVN commit 546298 by cloose:

Clear branch tag combobox before adding newly fetched list.

BUG: 125075



 M  +1 -0      checkoutdlg.cpp  


--- branches/KDE/3.5/kdesdk/cervisia/checkoutdlg.cpp #546297:546298
@@ -408,6 +408,7 @@
 
     branchTagList.sort();
 
+    branchCombo->clear();
     branchCombo->insertStringList(branchTagList);
 }