Clear branch tag combobox before adding newly fetched list.

BUG: 125075


svn path=/branches/KDE/3.5/kdesdk/cervisia/; revision=546298